# CPP_Templates_Bazel_Cmake

./: .gitignore  BUILD  CMakeLists.txt  README  WORKSPACE
greetings_lib/src/: greetings.cc
greetings_lib/test/: BUILD  greetings_test.cc
template_lib/include/: uid_pool.h  uid_type.h
template_lib/src/: uid_pool.cc
template_lib/test/: BUILD  uid_pool_test.cc
